[project]
name = "pined-openssl"
version = "0.2.2.dev1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.5",
]

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.source-dir = "src/pined/openssl"
wheel.packages = ["src/pined"]
wheel.install-dir = "pined/openssl"

[tool.pyright]
venv = ".venv"
venvPath = "."
reportMissingModuleSource = false
reportUnusedCallResult = false

[tool.ty.environment]
root = ["."]

[dependency-groups]
dev = [
    "poethepoet>=0.42.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
